# todolist

./: .env  .gitignore  .pre-commit-config.yaml  =  =5.0.0  Dockerfile  docker-compose.yaml  pyproject.toml
src/: todolist.db
src/core/: admin.py  serializers.py  urls.py  views.py
src/core/migrations/: 0001_initial.py
src/todolist/: settings.py  urls.py
